--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/quiz
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=drapala
+spring.datasource.password=qqq
