Added security and user with role admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/quiz
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=drapala
 spring.datasource.password=qqq
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.security=DEBUG
