Performed first successful request, from web to api

--- a/web/angular.json
+++ b/web/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "web"
+    }
+  },
+  "defaultProject": "web",
+  "cli": {
+    "analytics": false
+  }
 }
