Refactor backend code

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:postgresql://db.postgres/quiz
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=drapala
 spring.datasource.password=qqq
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
